modules/gdscript/tests/scripts/parser/errors/abstract_func_with_body.gd
extends RefCounted

abstract class A:
	abstract func f():
		pass

func test():
	pass
